--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,12 @@
-<p>login works!</p>
+<h1>Login</h1>
+    <form (ngSubmit)="login()">
+      <div>
+        <label for="user">User:</label>
+        <input type="text" id="user" [(ngModel)]="user" name="user" required>
+      </div>
+      <div>
+        <label for="password">Senha:</label>
+        <input type="password" id="password" [(ngModel)]="password" name="password" required>
+      </div>
+      <button type="submit">Login</button>
+</form>
