--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,12 +1,19 @@
-<h1>Login</h1>
-    <form (ngSubmit)="login()">
-      <div>
-        <label for="user">User:</label>
-        <input type="text" id="user" [(ngModel)]="user" name="user" required>
-      </div>
-      <div>
-        <label for="password">Senha:</label>
-        <input type="password" id="password" [(ngModel)]="password" name="password" required>
-      </div>
-      <button type="submit">Login</button>
-</form>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <h1 class="text-center">Login</h1>
+      <form (ngSubmit)="login()" class="mt-4">
+        <div class="form-group">
+          <label for="user">User:</label>
+          <input type="text" id="user" [(ngModel)]="user" name="user" class="form-control" required>
+        </div>
+        <div class="form-group">
+          <label for="password">Senha:</label>
+          <input type="password" id="password" [(ngModel)]="password" name="password" class="form-control" required>
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">Login</button>
+      </form>
+      <button (click)="goToSignup()" class="btn btn-link btn-block">Sign Up</button>
+    </div>
+  </div>
+</div>
