--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,21 +1,25 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <h1 class="text-center">Signup</h1>
-      <form (ngSubmit)="signup()" class="mt-4">
+      <h1 class="text-center">Sign-Up</h1>
+      <form [formGroup]="userForm" (ngSubmit)="signup()" class="mt-4">
         <div class="form-group">
-          <label for="email">Email:</label>
-          <input type="email" id="email" [(ngModel)]="email" name="email" class="form-control" required>
+          <label for="email">E-mail:</label>
+          <input type="email" id="email" formControlName="email" class="form-control" required>
         </div>
         <div class="form-group">
-          <label for="user">User:</label>
-          <input type="text" id="user" [(ngModel)]="user" name="user" class="form-control" required>
+          <label for="user">Usuário:</label>
+          <input type="text" id="user" formControlName="user" class="form-control" required>
         </div>
         <div class="form-group">
-          <label for="password">Password:</label>
-          <input type="password" id="password" [(ngModel)]="password" name="password" class="form-control" required minlength="8">
+          <label for="password">Senha:</label>
+          <input type="password" id="password" formControlName="password" class="form-control" required minlength="8">
         </div>
-        <button type="submit" class="btn btn-primary btn-block">Register</button>
+        <div class="form-group">
+          <label for="confirmPassword">Confirmação de Senha:</label>
+          <input type="password" id="confirmPassword" formControlName="confirmPassword" class="form-control" required>
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">Cadastrar</button>
       </form>
     </div>
   </div>
