add verification if passwords are the same in signup forms

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -11,9 +11,13 @@
           <label for="password">Senha:</label>
           <input type="password" id="password" [(ngModel)]="password" name="password" class="form-control" required>
         </div>
+        <div class="text-center">
         <button type="submit" class="btn btn-primary btn-block">Login</button>
+        </div>
       </form>
+      <div class="text-center">
       <button (click)="goToSignup()" class="btn btn-link btn-block">Sign Up</button>
+      </div>
     </div>
   </div>
 </div>
