--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <h1 class="text-center">Sign-Up</h1>
+      <h1 class="text-center">Sign Up</h1>
       <form [formGroup]="userForm" (ngSubmit)="signup()" class="mt-4">
         <div class="form-group">
           <label for="email">E-mail:</label>
@@ -19,7 +19,9 @@
           <label for="confirmPassword">Confirmação de Senha:</label>
           <input type="password" id="confirmPassword" formControlName="confirmPassword" class="form-control" required>
         </div>
-        <button type="submit" class="btn btn-primary btn-block">Cadastrar</button>
+        <div class="text-center">
+        <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
+        </div>
       </form>
     </div>
   </div>
