--- a/src/app/pages/home/components/navbar/navbar.component.html
+++ b/src/app/pages/home/components/navbar/navbar.component.html
@@ -12,6 +12,12 @@
               <li class="nav-item">
                 <a class="nav-link" routerLink="/app/users">Users</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="/app/users/add">Add User</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="/app/users/edit">Edit User</a>
+              </li>
             </ul>
             <form class="d-flex" role="search">
                 <button class="btn btn-outline-danger" routerLink="/">Logout</button>
