--- a/src/app/pages/home/components/welcome/welcome.component.html
+++ b/src/app/pages/home/components/welcome/welcome.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
     <div class="row align-items-center text-center full-height">
         <div class="col">
-            <h1>Welcome to your application</h1>
-            <h2>You are logged in</h2>
+            <h1>Bem-vindo à sua aplicação</h1>
+            <h2>Está logado</h2>
         </div>
     </div>
 </div>
