--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -11,6 +11,9 @@
           <label for="password">Senha:</label>
           <input type="password" id="password" [(ngModel)]="password" name="password" class="form-control" required>
         </div>
+        <div>
+          <h2></h2>
+        </div>
         <div class="text-center">
         <button type="submit" class="btn btn-primary btn-block">Login</button>
         </div>
