--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -19,6 +19,9 @@
           <label for="confirmPassword">Confirmação de Senha:</label>
           <input type="password" id="confirmPassword" formControlName="confirmPassword" class="form-control" required>
         </div>
+        <div>
+          <h2></h2>
+        </div>
         <div class="text-center">
         <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
         </div>
