--- a/src/app/pages/home/components/users/add-user/add-user.component.html
+++ b/src/app/pages/home/components/users/add-user/add-user.component.html
@@ -36,6 +36,9 @@
           <div *ngIf="adduserForm.get('password')?.touched && adduserForm.get('password')?.invalid" class="text-danger">
             Senha é um campo obrigatório.
           </div>
+          <div>
+          <h2></h2>
+          </div>
         </div>
         <div class="text-center">
           <button type="submit" class="btn btn-primary btn-block" [disabled]="adduserForm.invalid">Adicionar</button>
