--- a/src/app/pages/home/components/users/edit-user/edit-user.component.html
+++ b/src/app/pages/home/components/users/edit-user/edit-user.component.html
@@ -36,9 +36,12 @@
           <div *ngIf="edituserForm.get('password')?.touched && edituserForm.get('password')?.invalid" class="text-danger">
             Senha é um campo obrigatório.
           </div>
+          <div>
+            <h2></h2>
+          </div>
         </div>
         <div class="text-center">
-          <button type="submit" class="btn btn-primary btn-block" [disabled]="edituserForm.invalid">Adicionar</button>
+          <button type="submit" class="btn btn-primary btn-block" [disabled]="edituserForm.invalid">Editar</button>
         </div>
       </form>
     </div>
