--- a/src/app/pages/home/components/users/users.component.html
+++ b/src/app/pages/home/components/users/users.component.html
@@ -21,10 +21,10 @@
                     <td>{{ user.role }}</td>
                     <td>
                         <button class="action-button" (click)="editUserId(user.user, user.email)">
-                            <i class="fas fa-pencil-alt"></i>
+                            <i class="fas fa-pencil-alt"></i> Editar
                         </button>
                         <button class="action-button" (click)="removeUser(user.user)">
-                            <i class="fas fa-times"></i>
+                            <i class="fas fa-times"></i>Remover
                         </button>
                     </td>
                 </tr>
