--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,26 +1,27 @@
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <h1 class="text-center">Login</h1>
-      <form (ngSubmit)="login()" class="mt-4">
-        <div class="form-group">
-          <label for="user">User:</label>
-          <input type="text" id="user" [(ngModel)]="user" name="user" class="form-control" required>
-        </div>
-        <div class="form-group">
-          <label for="password">Senha:</label>
-          <input type="password" id="password" [(ngModel)]="password" name="password" class="form-control" required>
-        </div>
-        <div>
-          <h2></h2>
-        </div>
-        <div class="text-center">
-        <button type="submit" class="btn btn-primary btn-block">Login</button>
-        </div>
-      </form>
-      <div class="text-center">
-      <button (click)="goToSignup()" class="btn btn-link btn-block">Sign Up</button>
+<nav class="navbar navbar-expand-lg">
+  <div class="container-fluid">
+      <a class="navbar-brand" routerLink="/app">My App</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarScroll">
+          <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+              <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" routerLink="/app">Home</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" routerLink="/app/users">Users</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" routerLink="/app/users/add">Add User</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" routerLink="/app/users/edit">Edit User</a>
+              </li>
+          </ul>
+          <form class="d-flex" role="search">
+              <button class="btn btn-outline-danger btn-logout" routerLink="/">Logout</button>
+          </form>
       </div>
-    </div>
   </div>
-</div>
+</nav>
