solve html and css login & signup errors

--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -5,7 +5,7 @@
       <form [formGroup]="userForm" (ngSubmit)="signup()" class="mt-4">
         <div class="form-group">
           <label for="email">E-mail:</label>
-          <input type="email" id="email" formControlName="email" class="form-control" required>
+          <input type="text" id="email" formControlName="email" class="form-control" required>
         </div>
         <div class="form-group">
           <label for="user">Usuário:</label>
