--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,27 +1,29 @@
-<nav class="navbar navbar-expand-lg">
-  <div class="container-fluid">
-      <a class="navbar-brand" routerLink="/app">My App</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarScroll">
-          <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-              <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" routerLink="/app">Home</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" routerLink="/app/users">Users</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" routerLink="/app/users/add">Add User</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" routerLink="/app/users/edit">Edit User</a>
-              </li>
-          </ul>
-          <form class="d-flex" role="search">
-              <button class="btn btn-outline-danger btn-logout" routerLink="/">Logout</button>
-          </form>
+<div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <h1 class="text-center">Login</h1>
+        <form [formGroup]="loginForm" (ngSubmit)="login()" class="mt-4">
+          <div class="form-group">
+            <label for="user">Usuário:</label>
+            <input type="text" id="user" formControlName="user" class="form-control" required>
+          </div>
+          <div class="form-group">
+            <label for="password">Senha:</label>
+            <input type="password" id="password" formControlName="password" class="form-control">
+          </div>
+          <div>
+            <h2></h2>
+          </div>
+          <div class="text-center">
+          <button type="submit" class="btn btn-primary btn-block">Login</button>
+          </div>
+          <div>
+            <h2></h2>
+          </div>
+          <div class="text-center">
+            <button type="submit" class="btn btn-primary btn-block" routerLink="/signup">Sign Up</button>
+          </div>
+        </form>
       </div>
+    </div>
   </div>
-</nav>
