--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row justify-content-center">
+    <div class="container">
       <div class="col-md-6">
         <h1 class="text-center">Login</h1>
         <form [formGroup]="loginForm" (ngSubmit)="login()" class="mt-4">
