--- a/src/app/pages/signup/signup.component.css
+++ b/src/app/pages/signup/signup.component.css
@@ -1,42 +1,64 @@
 body {
     font-family: "Roboto", Arial, sans-serif; 
-    background-color: #f4f4f4;
+    background-color: #df1212;
     margin: 0;
     padding: 0;
 }
 
 .container {
-    max-width: 600px;
-    margin: 50px auto;
+    font-family: sans-serif;
+    min-width: 500px;
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding: 20px;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+@media (max-width: 500px) {
+    .container {
+      min-width: 90%;
+    }
+  }
+
+.form-text-new{
+    font-family: sans-serif;
+    font-size: 12px;
+    padding: 8px;
+}
 
 h1 {
+    font-family: sans-serif;
     text-align: center;
     margin-bottom: 20px;
 }
 
 .form-group {
+    font-family: sans-serif;
     margin-bottom: 15px;
 }
 
 label {
+    font-family: sans-serif;
     display: block;
     margin-bottom: 5px;
 }
 
 input[type="text"],
 input[type="password"] {
-    width: 100%;
-    padding: 10px;
+    font-family: sans-serif;
+    font-size: large;
+    width: 97%;
+    padding: 8px;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 8px;
 }
 
 .btn {
+    font-family: sans-serif;
     display: block;
     width: 100%;
     padding: 10px;
