--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="row justify-content-center">
+<div class="body">
+  <div class="container">
     <div class="col-md-6">
       <h1 class="text-center">Sign Up</h1>
       <form [formGroup]="userForm" (ngSubmit)="signup()" class="mt-4">
@@ -13,7 +13,8 @@
         </div>
         <div class="form-group">
           <label for="password">Senha:</label>
-          <input type="password" id="password" formControlName="password" class="form-control" required minlength="8">
+          <input type="password" id="password" formControlName="password" class="form-control" aria-describedby="passwordHelp">
+          <div id="passwordHelp" class="form-text-new">Senha deve ser entre 6 e 20 caracteres</div>
         </div>
         <div class="form-group">
           <label for="confirmPassword">Confirmação de Senha:</label>
