--- a/src/app/pages/home/components/users/users.component.html
+++ b/src/app/pages/home/components/users/users.component.html
@@ -2,10 +2,9 @@
     <div class="row align-items-center text-center full-height">
         <div class="col">
             <h1>Bem vindo à página de Users</h1>
-            <h2>Aqui pode começar a criar a sua fantástica aplicação angular</h2>
         </div>
         <div>
-            <table border="1">
+            <table>
                 <thead>
                     <tr>
                         <th>User</th>
@@ -28,11 +27,15 @@
                         </button>
                     </td>
                 </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td>
+                        <button type="submit" class="btn btn-primary" routerLink="/app/users/add">NEW</button>
+                    </td>
+                </tr>
             </tbody>
             </table>
-        </div>
-        <div>
-            <button type="submit" class="btn btn-primary" routerLink="/app/users/add">NEW</button>
-        </div>
     </div>
 </div>
