--- a/src/app/pages/home/components/welcome/welcome.component.html
+++ b/src/app/pages/home/components/welcome/welcome.component.html
@@ -1,20 +1,18 @@
 <div class="container-fluid">
     <div class="row align-items-center text-center full-height">
         <div class="col">
-            <h1>Bem-vindo à sua aplicação</h1>
-            <h2>Está logado</h2>
+            <h1>Bem-vindo</h1>
         </div>
     </div>
 </div>
 <div>
-    <h3>Stats</h3>
-    <p>Quantidade de usuários: {{ lengthusers.length }}</p>
+    <h2>Quantidade de usuários: {{ lengthusers.length }}</h2>
 </div>
 <div>
     <h2></h2>
 </div>
-<div>
-    <p>Quantidade de usuários por função</p>
+<div style="overflow-x: auto; overflow-y: auto;">
+    <h2>Quantidade de usuários por função</h2>
     <table>
         <thead>
           <tr>
