--- a/src/app/pages/home/components/users/add-user/add-user.component.html
+++ b/src/app/pages/home/components/users/add-user/add-user.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row justify-content-center">
+  <div class="container">
     <div class="col-md-6">
       <h1 class="text-center">Adicionar Usuário</h1>
       <form [formGroup]="adduserForm" (ngSubmit)="addUser()" class="mt-4">
@@ -12,7 +12,7 @@
         </div>
         <div class="form-group">
           <label for="email">E-mail:</label>
-          <input type="email" id="email" formControlName="email" class="form-control" required>
+          <input type="text" id="email" formControlName="email" class="form-control" required>
           <div *ngIf="adduserForm.get('email')?.touched && adduserForm.get('email')?.invalid" class="text-danger">
             E-mail é obrigatório e deve ser um e-mail válido.
           </div>
