--- a/src/app/pages/home/components/users/edit-user/edit-user.component.css
+++ b/src/app/pages/home/components/users/edit-user/edit-user.component.css
@@ -1,54 +1,69 @@
-body {
-    font-family: "Roboto", Arial, sans-serif; 
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
-}
-
 .container {
-    max-width: 600px;
-    margin: 50px auto;
+    font-family: sans-serif;
+    min-width: 500px;
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding: 20px;
-    background-color: #fff;
+    background-color: #0c4b33;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+@media (max-width: 500px) {
+    .container {
+      min-width: 90%;
+    }
+  }
 
 h1 {
+    color: #f1fff7;
+    font-family: sans-serif;
     text-align: center;
     margin-bottom: 20px;
 }
 
 .form-group {
+    font-family: sans-serif;
     margin-bottom: 15px;
 }
 
 label {
+    color: #f1fff7;
+    font-family: sans-serif;
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 input[type="text"],
 input[type="password"] {
-    width: 100%;
-    padding: 10px;
+    font-family: sans-serif;
+    font-size: large;
+    width: 97%;
+    padding: 8px;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 8px;
 }
 
 .btn {
+    font-family: sans-serif;
     display: block;
     width: 100%;
     padding: 10px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    background-color: #007bff;
+    background-color: #187f58;
     color: #fff;
 }
 
 .btn:hover {
-    background-color: #0056b3;
+    background-color: #44b78b;
+}
+
+.text-danger{
+    color: red;
 }
 
 .btn-link {
