--- a/src/app/pages/home/components/users/edit-user/edit-user.component.html
+++ b/src/app/pages/home/components/users/edit-user/edit-user.component.html
@@ -12,7 +12,7 @@
         </div>
         <div class="form-group">
           <label for="email">E-mail:</label>
-          <input type="email" id="email" formControlName="email" class="form-control" required>
+          <input type="text" id="email" formControlName="email" class="form-control" required>
           <div *ngIf="edituserForm.get('email')?.touched && edituserForm.get('email')?.invalid" class="text-danger">
             E-mail é obrigatório e deve ser um e-mail válido.
           </div>
