--- a/src/app/pages/home/components/users/add-user/add-user.component.html
+++ b/src/app/pages/home/components/users/add-user/add-user.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="col-md-6">
       <h1 class="text-center">Adicionar Usuário</h1>
-      <form [formGroup]="adduserForm" (ngSubmit)="addUser()" class="mt-4">
+      <form [formGroup]="adduserForm" (ngSubmit)="onSubmit()" class="mt-4">
         <div class="form-group">
           <label for="user">Nome:</label>
           <input type="text" id="user" formControlName="user" class="form-control" required>
