delete user from users page, implemented

--- a/src/app/pages/home/components/users/users.component.html
+++ b/src/app/pages/home/components/users/users.component.html
@@ -22,7 +22,7 @@
               <button class="action-button" (click)="editUser(user.ID, user.Username, user.Email, user.Role)">
                 <i class="fas fa-pencil-alt"></i> Editar
               </button>
-              <button class="action-button" (click)="removeUser(user.ID)">
+              <button class="action-button" (click)="removeUser(user.Username)">
                 <i class="fas fa-times"></i>Remover
               </button>
             </td>
