--- a/src/app/pages/home/components/welcome/welcome.component.html
+++ b/src/app/pages/home/components/welcome/welcome.component.html
@@ -1,25 +1,29 @@
 <div class="container-fluid">
-    <div class="row align-items-center text-center full-height">
+  <div class="row align-items-center text-center full-height">
       <div class="col">
-        <h1>Bem-vindo</h1>
+          <h1>Bem-vindo</h1>
       </div>
-    </div>
   </div>
-  
-  <div>
-    <h2>Total de usuários cadastrados: {{ totalUsers }}</h2>
-  </div>  
-<div>
-    <h2></h2>
 </div>
+
+<div>
+  <h2>Total de usuários cadastrados: {{ totalUsers }}</h2>
+</div>
+
 <div style="overflow-x: auto; overflow-y: auto;">
-    <h2>Quantidade de usuários por função</h2>
-    <table>
-        <thead>
+  <h2>Quantidade de usuários por função</h2>
+  <table>
+      <thead>
           <tr>
-            <th>Função</th>
-            <th>Quantidade de Usuários</th>
+              <th>Função</th>
+              <th>Quantidade de Usuários</th>
           </tr>
-        </thead>
-      </table>      
+      </thead>
+      <tbody>
+          <tr *ngFor="let role of userRoles">
+              <td>{{ role.role }}</td>
+              <td>{{ role.count }}</td>
+          </tr>
+      </tbody>
+  </table>
 </div>
