--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -26,6 +26,9 @@
         <div class="text-center">
         <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
         </div>
+        <div class="text-center">
+          <button type="submit" class="btn btn-link" routerLink="/login">Back to Login</button>
+        </div>
       </form>
     </div>
   </div>
