--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -74,10 +74,43 @@ input[type="password"] {
 }
 
 .github-button {
-    color: #ffffff;
+    color: #3a3535;
     border: none;
     padding: 10px 20px; 
     font-size: 16px; 
     border-radius: 5px;
     cursor: pointer; 
+}
+
+.gitbutton {
+    background-color: #111827;
+    border: 1px solid transparent;
+    border-radius: 0.75rem;
+    color: #FFFFFF;
+    cursor: pointer;
+    font-family: "Inter var", ui-sans-serif, system-ui, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-size: 1.125rem;
+    font-weight: 600;
+    line-height: 1.5rem;
+    padding: 0.75rem 1.2rem;
+    text-align: center;
+    text-decoration: none;
+    transition: background-color 0.2s ease, color 0.2s ease, border-color 0.2s ease;
+    user-select: none;
+    width: auto;
+}
+
+.gitbutton:hover {
+    background-color: #374151;
+}
+
+.gitbutton:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+@media (min-width: 768px) {
+    .gitbutton {
+        padding: 0.75rem 1.5rem;
+    }
 }
