feat: add todo component

--- a/src/app/pages/home/components/navbar/navbar.component.html
+++ b/src/app/pages/home/components/navbar/navbar.component.html
@@ -2,5 +2,6 @@
   <li><a href="#home" routerLink="/app">Home</a></li>
   <li><a href="#Users" routerLink="/app/users">Users</a></li>
   <li><a href="#EditUser" routerLink="/app/users/edit">Edit User</a></li>
+  <li><a href="#TODO" routerLink="/app/users/todo">TODO</a></li>
   <li style="float:right"><a class="active" href="#Logout" routerLink="/">Logout</a></li>
 </ul> 
