--- a/src/app/pages/home/components/welcome/welcome.component.html
+++ b/src/app/pages/home/components/welcome/welcome.component.html
@@ -1,11 +1,29 @@
 <div class="container-fluid">
-    <div class="row align-items-center text-center full-height">
-        <div class="col">
-            <h1>Bem-vindo</h1>
-        </div>
-    </div>
+  <div class="row align-items-center text-center full-height">
+      <div class="col">
+          <h1>Bem-vindo</h1>
+      </div>
   </div>
-  
-  <div>
-    <h2>Total de usuários cadastrados: {{ totalUsers }}</h2>
-  </div>
+</div>
+
+<div>
+  <h2>Total de usuários cadastrados: {{ totalUsers }}</h2>
+</div>
+
+<div>
+  <h2>Funções e Quantidades</h2>
+  <table>
+      <thead>
+          <tr>
+              <th>Função</th>
+              <th>Quantidade</th>
+          </tr>
+      </thead>
+      <tbody>
+          <tr *ngFor="let role of userRoles">
+              <td>{{ role.role }}</td>
+              <td>{{ role.count }}</td>
+          </tr>
+      </tbody>
+  </table>
+</div>
